# htr-cli

./: .gitignore  CHANGELOG.md  Dockerfile.tfe  LICENSE  README.md  pyproject.toml  tfe_params_cheatsheet.md
.github/workflows/: publish.yml  test.yml
dev_scratch/: check_shear.py  check_shear_0_1.sh  check_shear_1_2.sh  check_shear_2_plus.sh  inspect_data_structure.py  shear_log.txt
docs/: tfe_params_cheatsheet.md
src/htr_cli/: __init__.py  cli.py  config.py  data_extraction.py  ids_generation.sh  image_processing.py  image_processing_tfe.py  inspect_data_structure.py  paths.py  port_escriptorium.py  pull_gt.py  split_dataset.py  utils.py
src/htr_prep/: __init__.py  config.py  data_extraction.py  image_processing.py  initialize.py  paths.py  pull_gt.py  split_dataset.py  utils.py
src/htr_prep/_vendor/: deslant_img.py
tests/: test_cli.py  test_image_ops.py  test_utils.py
