[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htr-prep"
version = "0.1.0"
description = "CLI for preparing Handwritten Text Recognition (HTR) datasets for PyLaia traininig."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-file = ["LICENSE"]
authors = [{ name = "Andrea Scalia", email = "andrea95scalia@gmail.com" }]
keywords = [
    "htr",
    "ocr",
    "transkribus",
    "pylaia",
    "handwritten-text-recognition",
    "dataset",
    "page-xml"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dependencies = [
    "lxml>=4.9",
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pandas>=3.0",
    "requests>=2.26",
    "scikit-learn>=1.8",
    "tqdm>=4.60",
    "typer>=0.15",
    "transkribus-client>=0.3",
    "keyring>=25.7.0",
    "tomli-w>=1.2.0",
    "platformdirs>=4.9.6",
    "rich>=15.0.0"
]

[project.urls]
Homepage = "https://github.com/ndrscalia/htr-prep"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>5", "ruff>0.6"]

[project.scripts]
htr-prep = "htr_prep.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/htr_prep"]

[tool.hatch.version]
path = "src/htr_prep/__init__.py"

[tool.uv]
override-dependencies = [
    "lxml>=4.6",
    "requests>=2.26",
]
